welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:8: error: Unit does not take parameters
    else () {
            ^arrayFront9:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (j <- 0 to 3) {
         ^